--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -45,6 +45,7 @@ $b4-height: 257mm;
 $b5-width: 182mm;
 $b5-height: 257mm;
 // page size
+$resume-width: $b5-width * 2;
 $page-width: $b5-width;
 $page-height: $b5-height;
 // paper margin
