--- a/scss/_b4-variable.scss
+++ b/scss/_b4-variable.scss
@@ -4,8 +4,7 @@
 $base-color: #fff;
 $font-color: #000;
 $line-color: #000;
-// $body-bg-color: #eee
-$body-bg-color: yellow;
+$body-bg-color: #eee;
 $border-color: #333;
 $enable-color: #4bd865;
 $disable-color: #ccc;
