--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -1,4 +1,22 @@
-// header menu buttons style <Apply it to the button or input-label element >
+// 印刷時適用スタイル
+@mixin media-print {
+  @media print {
+    @content;
+  }
+}
+// 表示
+@mixin media-screen {
+  @media screen {
+    @content;
+  }
+}
+// メディアクエリー（横｜縦切り替え）ブレークポイント
+@mixin media-screen-break-two-page {
+  @media screen and (max-width: $two-page-breakpoint) {
+    @content;
+  }
+}
+// メニューボタンの共通部分スタイル
 @mixin menuButtonStyle {
   width: 40px;
   height: 40px;
@@ -11,7 +29,7 @@
     height: 24px;
   }
 }
-// modal window common part
+// モーダルウィンドウ共通部分
 @mixin modalLayout {
   display: none;
   position: fixed;
@@ -26,7 +44,7 @@
   box-shadow: $modal-show-body-background;
   animation: fade 0.5s linear 0s;
 }
-// help close button icon part
+// ヘルプウィンドウ閉じるボタン
 @mixin helpCloseX {
   content: '';
   width: 30px;
@@ -39,7 +57,7 @@
   left: 0;
   margin: auto;  
 }
-// resume-line style
+// 学歴・職歴欄
 @mixin resume-line {
   width: $content-width;
   height: $field-line-hight;
