--- a/scss/b5.scss
+++ b/scss/b5.scss
@@ -4,6 +4,7 @@
 @import "mixin";
 @import "style";
 
+
 main {
   .resume {
     @include media-print {
@@ -11,12 +12,16 @@ main {
       grid-template-columns: $page-width;
     }
     .left-page {
+
+
+    }
+    .right-page {
       border: {
-        right: $page-boder;
+        left:  $page-boder;
       }
       @include media-screen-break-two-page {
         border: {
-          right: none;
+          left: none;
         }
       }
       @include media-print {
