--- a/css/a4.css
+++ b/css/a4.css
@@ -255,7 +255,7 @@ main .resume .left-page .resume-header h2 {
 main .resume .left-page .resume-header .creataion-date {
   padding: 1mm;
   display: grid;
-  grid-template-columns: 13mm 3mm 5.5mm 3mm 5.5mm 8.5mm;
+  grid-template-columns: 13mm 3mm 5.5mm 3mm 5.5mm 9mm;
   justify-self: end;
   align-self: flex-end;
 }
@@ -439,12 +439,11 @@ main .resume .left-page .personal-data .basic-data .birthday p.input-field {
 
 main .resume .left-page .personal-data .contact-info,
 main .resume .left-page .personal-data .emergency-contact {
+  width: 176mm;
   display: grid;
-  grid-template-columns: 19mm 113.3mm 42.7mm;
+  grid-template-columns: 19mm 113.8mm 42.2mm;
   grid-template-rows: 8.5mm 7mm 10mm;
   border-left: 1mm solid #000;
-  border-right: 1mm solid #000;
-  border-bottom: 0.35mm solid #000;
 }
 
 main .resume .left-page .personal-data .contact-info .resides-furigana,
@@ -479,6 +478,7 @@ main .resume .left-page .personal-data .emergency-contact .resides {
   grid-column: 1 / 3;
   font-size: 11pt;
   border-right: 0.35mm solid #000;
+  border-bottom: 0.35mm solid #000;
   align-self: center;
 }
 
@@ -492,6 +492,7 @@ main .resume .left-page .personal-data .emergency-contact .phone-number {
   grid-row: 1 / 2;
   grid-column: 3 / 4;
   border-top: 1mm solid #000;
+  border-right: 1mm solid #000;
   border-bottom: 0.35mm solid #000;
   display: grid;
   grid-template-columns: 9mm 32mm;
@@ -515,6 +516,8 @@ main .resume .left-page .personal-data .emergency-contact .e-mail {
   display: grid;
   grid-template-columns: 41mm;
   grid-template-rows: 6mm 11mm;
+  border-right: 1mm solid #000;
+  border-bottom: 0.35mm solid #000;
 }
 
 main .resume .left-page .personal-data .contact-info .e-mail p.label,
@@ -530,12 +533,16 @@ main .resume .left-page .personal-data .emergency-contact .e-mail p.input-field 
   line-height: 10mm;
 }
 
-main .resume .left-page .personal-data .emergency-contact {
+main .resume .left-page .personal-data .emergency-contact .phone-number {
+  border-top: none;
+}
+
+main .resume .left-page .personal-data .emergency-contact .e-mail {
   border-bottom: 1mm solid #000;
 }
 
-main .resume .left-page .personal-data .emergency-contact .phone-number {
-  border-top: none;
+main .resume .left-page .personal-data .emergency-contact .resides {
+  border-bottom: 1mm solid #000;
 }
 
 main .resume .left-page .education-and-career-history .resume-line {
@@ -897,18 +904,18 @@ footer {
   }
 }
 
-main .resume .left-page {
-  border-right: 1px solid rgba(0, 0, 0, 0.5);
+main .resume .right-page {
+  border-left: 1px solid rgba(0, 0, 0, 0.5);
 }
 
 @media screen and (max-width: 237mm) {
-  main .resume .left-page {
-    border-right: none;
+  main .resume .right-page {
+    border-left: none;
   }
 }
 
 @media print {
-  main .resume .left-page {
+  main .resume .right-page {
     border: none;
   }
 }
