--- a/css/b4.css
+++ b/css/b4.css
@@ -255,7 +255,7 @@ main .resume .left-page .resume-header h2 {
 main .resume .left-page .resume-header .creataion-date {
   padding: 1mm;
   display: grid;
-  grid-template-columns: 13mm 3mm 5.5mm 3mm 5.5mm 8.5mm;
+  grid-template-columns: 13mm 3mm 5.5mm 3mm 5.5mm 9mm;
   justify-self: end;
   align-self: flex-end;
 }
@@ -439,12 +439,11 @@ main .resume .left-page .personal-data .basic-data .birthday p.input-field {
 
 main .resume .left-page .personal-data .contact-info,
 main .resume .left-page .personal-data .emergency-contact {
+  width: 148mm;
   display: grid;
-  grid-template-columns: 19mm 92.5mm 35.5mm;
+  grid-template-columns: 19mm 92.5mm 35.7mm;
   grid-template-rows: 7.3mm 6mm 9mm;
   border-left: 1mm solid #000;
-  border-right: 1mm solid #000;
-  border-bottom: 0.35mm solid #000;
 }
 
 main .resume .left-page .personal-data .contact-info .resides-furigana,
@@ -479,6 +478,7 @@ main .resume .left-page .personal-data .emergency-contact .resides {
   grid-column: 1 / 3;
   font-size: 11pt;
   border-right: 0.35mm solid #000;
+  border-bottom: 0.35mm solid #000;
   align-self: center;
 }
 
@@ -492,6 +492,7 @@ main .resume .left-page .personal-data .emergency-contact .phone-number {
   grid-row: 1 / 2;
   grid-column: 3 / 4;
   border-top: 1mm solid #000;
+  border-right: 1mm solid #000;
   border-bottom: 0.35mm solid #000;
   display: grid;
   grid-template-columns: 9mm 25mm;
@@ -515,6 +516,8 @@ main .resume .left-page .personal-data .emergency-contact .e-mail {
   display: grid;
   grid-template-columns: 35mm;
   grid-template-rows: 6mm 9mm;
+  border-right: 1mm solid #000;
+  border-bottom: 0.35mm solid #000;
 }
 
 main .resume .left-page .personal-data .contact-info .e-mail p.label,
@@ -530,12 +533,16 @@ main .resume .left-page .personal-data .emergency-contact .e-mail p.input-field 
   line-height: 9mm;
 }
 
-main .resume .left-page .personal-data .emergency-contact {
+main .resume .left-page .personal-data .emergency-contact .phone-number {
+  border-top: none;
+}
+
+main .resume .left-page .personal-data .emergency-contact .e-mail {
   border-bottom: 1mm solid #000;
 }
 
-main .resume .left-page .personal-data .emergency-contact .phone-number {
-  border-top: none;
+main .resume .left-page .personal-data .emergency-contact .resides {
+  border-bottom: 1mm solid #000;
 }
 
 main .resume .left-page .education-and-career-history .resume-line {
