help function add

--- a/scss/_a-variable.scss
+++ b/scss/_a-variable.scss
@@ -40,6 +40,7 @@ $email-height: 17mm; //
 $email-grid-t-cols: 41mm; //
 $email-grid-t-rows: 6mm 11mm; //
 $email-input-field-height: 10mm; // 
+$email-input-field-line-height: 1.5em;
 $resume-line-grid-t-cols: 26.5mm 14.5mm 133mm; // 174mm
 $resume-line-p-padding: 0 1mm;
 $resume-line-p-3th-cols-padding: 0 2mm;
