--- a/scss/_b-variable.scss
+++ b/scss/_b-variable.scss
@@ -40,6 +40,7 @@ $email-height: 15mm; //
 $email-grid-t-cols: 35mm; //
 $email-grid-t-rows: 6mm 9mm; // 
 $email-input-field-height: 9mm; //
+$email-input-field-line-height: 1.5em;
 $resume-line-grid-t-cols: 22.5mm 12.5mm 111mm; // 146mm
 $resume-line-p-padding: 0 1mm;
 $resume-line-p-3th-cols-padding: 0 2mm;
