--- a/css/a4.css
+++ b/css/a4.css
@@ -530,7 +530,7 @@ main .resume .left-page .personal-data .emergency-contact .e-mail p.input-field 
   text-align: center;
   font-size: 9pt;
   height: 10mm;
-  line-height: 10mm;
+  line-height: 1.5em;
 }
 
 main .resume .left-page .personal-data .emergency-contact .phone-number {
@@ -843,6 +843,11 @@ main #help-window {
 main #help-window.show {
   display: block;
   z-index: 20;
+}
+
+main #help-window iframe {
+  width: 100%;
+  height: 100%;
 }
 
 main #help-window .help-close {
