--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -286,6 +286,7 @@ main {
           }
           .name {
             height: $name-line-height;
+            line-height: $name-line-height;
             grid-column: 1 / 2;
             grid-row: 2 / 3;
             display: grid;
