--- a/scss/_a-variable.scss
+++ b/scss/_a-variable.scss
@@ -61,3 +61,4 @@ $objective-input-field-height: 50.2mm; //
 // @media screen Threshold [ 200mm＝96dpiだと756px | 237.07mm=96dpiで896px
 // ------------------------------------------------------------------------- //
 $two-page-breakpoint: 237mm;   //
+$small-screen-breakpoin: 210mm; //
