--- a/scss/_b-variable.scss
+++ b/scss/_b-variable.scss
@@ -61,3 +61,4 @@ $objective-input-field-height:  43.8mm; //
 // @media screen Threshold 
 // ------------------------------------------------------------------------- //
 $two-page-breakpoint: 200mm;
+$small-screen-breakpoin: 182mm; // 
