--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -24,13 +24,87 @@ header {
   background-color: $base-color;
   display: grid;
   grid-template-columns: 300px calc(100% - 300px);
+  align-items: center;
   position: fixed;
   top: 0;
   z-index: 10;
   font-family: sans-serif;
   @include media-print {
     display: none;
-
+  }
+  .title {
+    h1 {
+      font-size: 24px;
+      padding: 0;
+      @include media-screen-break-two-page{
+        font-size: 16px;
+        line-height: 30px;
+      }
+      @include media-small-screen-break {
+        display: block;
+        font-size: 24px;
+      }
+    }    
+    p {
+      font-size: 10px;
+      @include media-screen-break-two-page{
+        display: none;
+      }
+    }
+  }
+  .menu-button {
+    justify-self: right;
+    width: 40px;
+    height: 40px;
+    display: none;
+    border: 1px solid #333;
+    border-radius: 4px;
+    box-shadow: 0 0 4px rgba(0,0,0, 0.3);
+    position: relative;
+    &::before {
+      @include menu-button-decoration;
+      top: -12px;
+    }
+    &::after {
+      @include menu-button-decoration;
+      top: 12px;
+    }
+    @include media-small-screen-break {
+      display: block;
+    }
+  }
+  #is-menu-show {
+    display: none;
+    @include media-small-screen-break {
+      &:checked {
+        +.menu-button {
+          &::before {
+            top: 0;
+            transform: rotate(45deg);
+          }
+          &::after {
+            top: 0;
+            transform: rotate(-45deg);
+          }
+        }
+        ~.menu {
+          display: grid;
+          grid-template-columns: repeat(3, 1fr);
+          column-gap: 4px;
+          grid-template-rows: repeat(3, 1fr);
+          row-gap: 4px;
+          grid-auto-flow: row;
+          position: absolute;
+          top: 50px;
+          right: 10px;
+          padding: 8px;
+          background-color: #fff;
+          border: 1px solid #333;
+          border-radius: 4px;
+          box-shadow: 0 0 8px rgba(0,0,0,0.3);
+        }
+      }
+    }
   }
   .menu {
     display: grid;
@@ -38,6 +112,9 @@ header {
     column-gap: 10px;
     justify-self: end;
     align-items: center;
+    @include media-small-screen-break {
+      display: none;
+    }
     .editing-switch {
       width: 40px;
       height: 40px;
@@ -135,6 +212,9 @@ main {
     @include media-screen-break-two-page {
       width: $page-width;
       grid-template-columns: $page-width;
+    }
+    @include media-middle-screen-break {
+      transform: translate(-$side-margin, 0);
     }
     .page {
       width: $page-width;
